# FrameSentry

./: .gitignore  AGENTS.md  README.md  app.py  pyproject.toml  requirements.txt  run.bat
config/: api_config.example.json
framesentry/: _port_check.py  analysis.py  cache.py  cli.py  config.py  frame_reader.py  metadata.py  metrics.py  presentation.py  scan_job.py  scanner.py
framesentry/analyzers/: __init__.py  color_analysis.py  frame_issues.py  llm_subtitle_detection.py  metadata.py  motion_analysis.py  subtitle_analysis.py
framesentry/detectors/: black_frame.py  duplicate_frame.py  transient_outlier.py
framesentry/report/: html_report.py  json_report.py
framesentry/utils/: screenshots.py  timecode.py
samples/: README.md
tests/: synthetic_video_check.py  test_analysis.py  test_cache.py  test_color_analysis.py  test_default_registry.py  test_detectors.py  test_file_dialog.py  test_llm_subtitle_detection.py  test_metadata.py  test_metrics.py  test_motion_analysis.py  test_scan_job.py  test_screenshots.py  test_subtitle_analysis.py  test_timecode.py  ui_smoke_check.py
